--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,9 @@
 [deps]
+ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
-ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+GoogleGenAI = "903d41d1-eaca-47dd-943b-fee3930375ab"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
